# modern-cpp-gtk-quickstart

./: .gitignore  README.md  dev-requirements.txt  meson.build
src/: MainWindow.cpp  MainWindow.h  main.cpp
